Got the project building again, fixed the lack of remove-a-password, fixed dependencies, everything implemented so far aside from reading a csv is working.

--- a/password manager/resources/public/styles.css
+++ b/password manager/resources/public/styles.css
@@ -289,6 +289,7 @@ button {
   font-family: Cambria;
 }
 #generate-pw-button:hover,
+#copy-pw-button:hover,
 button:hover {
   background-color: #b5b8d39d;  
 }
